# hsl-rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  Readme.md  index.html  search-index.js
hsl/: index.html  sidebar-items.js  struct.HSL.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js
src/: lib.rs
src/hsl/: lib.rs.html
tests/: rgb_and_back.rs
