[package]
name = "hsl"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/hsl-rs.git"
homepage = "https://github.com/killercup/hsl-rs.git"
license = "MIT"
readme = "README.md"
documentation = "http://killercup.github.io/hsl-rs/"
description = "Represent colors in HSL and convert between HSL and RGB."

[features]
default = []
dev = ["clippy"]

[dependencies]
clippy = { version = "0.0.15", optional = true }
