[package]
name = "hsl"
version = "0.1.1"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/hsl-rs.git"
homepage = "https://github.com/killercup/hsl-rs.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "http://killercup.github.io/hsl-rs/"
description = "Represent colors in HSL and convert between HSL and RGB."

[features]
default = []
dev = ["clippy"]

[dependencies]
clippy = { version = "0.0.15", optional = true }

[dev-dependencies]
quickcheck = "0.2.24"
